remove useless <i> tag

--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -27,7 +27,7 @@
                     <span class="glyphicon glyphicon-search search-icon"></span>
                     <input id="txt-search-groups" type="text" class="form-control" placeholder="Search by group name...">
                 </div>
-                <p id="id-Group-Search-Result-Msg"><i></i></p>
+                <p id="id-Group-Search-Result-Msg"></p>
             </div>
         </div>
 
