Change text and id of getting started toggle

--- a/theme/templates/pages/dashboard.html
+++ b/theme/templates/pages/dashboard.html
@@ -57,8 +57,8 @@ timestamp should go with a template tags to convert to a human readble day.
                 <span>
                  <h3 class="home-page-block-title">Recently Visited </h3>
                     <span style="float: right">
-                    <a href="#" id="change_me" class="get-started-toggle" data-toggle="collapse"
-                       data-target="#getStarted">Show get started</a>
+                    <a href="#" id="id-getting-started-toggle" class="get-started-toggle" data-toggle="collapse"
+                       data-target="#getStarted">Show Getting Started</a>
                     </span>
                 </span>
             </div>
