--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2024,7 +2024,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <a type="button" data-dismiss="modal" class="btn btn-default">Close</a>
+                    <a type="button" data-dismiss="modal" class="btn btn-default" onClick="window.location.reload();">Close</a>
                 </div>
             </div>
         </div>
