--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -1,54 +1,47 @@
-{#        ======= Subject Keywords =======#}
-{% if not resource_edit_mode %}
-    {% if keywords %}
-    <div class="col-xs-12 content-block">
-        <h3>Subject Keywords</h3>
 
-        <div class="tags">
-            <ul id="list-keywords" class="tag-list custom-well">
-                {% for k in keywords %}
-                <li>
-                    <a class='tag' target="_blank" href="/search/?q=&selected_facets=subject_exact:{{ k }}">{{ k }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-    {% endif %}
-{% else %}
-    <div class="col-xs-12 content-block">
-        <h3>Subject Keywords</h3>
-        <div class="row">
-            <div class="col-xs-12 col-sm-6">
-                <form action="/hsapi/_internal/{{ cm.short_id }}/subject/add-metadata/" id="id-subject"
-                      method="post">
-                    {% csrf_token %}
-                    <div class="tags">
-                        <div id="add-keyword-wrapper" class="input-group">
-                            <input id="txt-keyword" type="text" class="form-control" placeholder="e.g., Hydrologic_modeling, USU, Land use">
-                            <span class="input-group-btn">
-                        <a id="btn-add-keyword" class="btn btn-success" type="button">Add</a>
-                    </span>
-                        </div>
-                        <ul id="lst-tags" class="custom-well tag-list">
-                        </ul>
+
+<div class="col-xs-12 content-block" id="app-keyword">
+    <h3>Subject Keywords</h3>
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            {% if resource_edit_mode %}
+                {% csrf_token %}
+            {% endif %}
+            <div class="tags">
+                {% if resource_edit_mode %}
+                    <div id="add-keyword-wrapper" class="input-group">
+                        <input v-model="newKeyword" id="txt-keyword" type="text" class="form-control"
+                               placeholder="Examples: Hydrologic_modeling, USU, land use">
+                        <span class="input-group-btn">
+                            <button v-on:click="addButton('{{ cm.short_id }}')" id="btn-add-keyword"
+                                    class="btn btn-success" type="button">Add</button>
+                        </span>
                     </div>
-                    <div>
-                        <p class="text-danger small" id="id-keywords-msg" style="display: none;"> Duplicate. Keyword not
-                            added.</p>
-                    </div>
-                    <fieldset>
-                        <div id="div_id_value" class="control-group">
-                            <div class="controls">
-                                <input class="form-control input-sm textInput" id="id_subject_keyword_control_input"
-                                       maxlength="500" name="value"
-                                       type="text" style="display: none;">{{ cm.keywords_string }}
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
+                {% endif %}
+
+
+                <ul id="lst-tags" class="custom-well tag-list">
+
+                    {% for keyword in keywords %}
+                        {% if keyword %}
+<li>
+                                {% if resource_edit_mode %}
+                                    <span class='tag'>{{ keyword }} &nbsp;<span v-on:click="removeKeyword('{{ keyword }}')" class="glyphicon glyphicon-remove-circle icon-remove"></span></span>
+                                {% else %}
+
+                                    <a class='tag' target="_blank" href="/search/?q=&selected_facets=subject_exact:{{ keyword }}">{{ keyword }}</a>
+
+                                {% endif %}
+</li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div>
+                <p class="text-danger small" id="id-keywords-msg"> Duplicate. Keyword not added.</p>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
                 <span class="alert alert-warning group-title" role="alert">
                     <div class="flex">
                         <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
@@ -57,7 +50,6 @@
                         </em>
                     </div>
                 </span>
-            </div>
         </div>
     </div>
-{% endif %}
+</div>
