--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -22,11 +22,11 @@
                     </div>
                 {% endif %}
 
-                <ul id="lst-tags" class="custom-well tag-list">
+                <ul id="lst-tags" class="custom-well tag-list hidden">
                     <li v-for="k in resKeywords">
                         {% if resource_edit_mode %}
                           {# TODO: prevent raw delimeters from being rendered before Vue.js is executed              #}
-                            <span class='tag'>${ k }<span
+                            <span class="tag">${ k }<span
                                     @click="removeKeyword('{{ cm.short_id }}', k )"
                                     class="glyphicon glyphicon-remove-circle icon-remove"></span></span>
                         {% else %}
