Handle adding duplicate keywords

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -38,7 +38,7 @@
 
             </div>
             <div>
-                <p class="text-danger small" id="id-keywords-msg"> Duplicate. Keyword not added.</p>
+                <p class="text-danger small" id="id-keywords-msg" v-if="showIsDuplicate"> Duplicate. Keyword not added.</p>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6">
