Code cleanup Uncomment file type keyword operations

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -1,5 +1,5 @@
 <script>
-  resKeywords = {{ keywords|safe }};
+  const RES_KEYWORDS = {{ keywords|safe }};
 </script>
 
 <div class="col-xs-12 content-block" id="app-keyword">
