[#3242] add functional changes to prompt for title

--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -8,13 +8,25 @@
     <li {% if request.path == "/my-resources/" %}class="active"{% endif %} id="dropdown-menu-my-resources">
         <a href="/my-resources/">My Resources</a>
     </li>
+    <li {% if request.path == "/search/" %}class="active"{% endif %} id="dropdown-menu-search">
+        <a href="/search/">Discover</a>
+    </li>
+    <li {% if request.path == "/collaborate/" %}class="active"{% endif %} id="dropdown-menu-collaborate">
+        <a href="/collaborate/">Collaborate</a>
+    </li>
+    <li class="" id="dropdown-menu-https:--www.hydroshare.org-apps-">
+        <a href="https://www.hydroshare.org/apps/">Apps</a>
+    </li>
+    <li class="" id="dropdown-menu-https:--help.hydroshare.org">
+        <a href="http://help.hydroshare.org">Help</a>
+    </li>
+</ul>
+
+{% if not user.is_anonymous %}
+<ul class="nav navbar-nav navbar-right btn-primary" style="margin-right: 15px">
     <li class="dropdown res-dropdown">
         <a id="select-resource-type"
-           {% if user.is_anonymous %}
-           href="/accounts/login/?next=/my-resources"
-           {% else %}
            href="#" data-toggle="dropdown"
-           {% endif %}
            class="dropdown-toggle"
            role="button" aria-haspopup="true" aria-expanded="false">Create
         </a>
@@ -86,19 +98,7 @@
         </ul>
         {% endif %}
     </li>
-    <li {% if request.path == "/search/" %}class="active"{% endif %} id="dropdown-menu-search">
-        <a href="/search/">Discover</a>
-    </li>
-    <li {% if request.path == "/collaborate/" %}class="active"{% endif %} id="dropdown-menu-collaborate">
-        <a href="/collaborate/">Collaborate</a>
-    </li>
-    <li class="" id="dropdown-menu-https:--www.hydroshare.org-apps-">
-        <a href="https://www.hydroshare.org/apps/">Apps</a>
-    </li>
-    <li class="" id="dropdown-menu-https:--help.hydroshare.org">
-        <a href="http://help.hydroshare.org">Help</a>
-    </li>
-
+{% endif %}
     {% if not user.is_anonymous %}
         <li class="visible-xs"><a href="/user/{{ user.id }}/">Profile</a></li>
     {% endif %}
@@ -112,4 +112,5 @@
         {% endif %}
     {% endifinstalled %}
 </ul>
+
 {% endspaceless %}
