[#3242] Adjust font size of title input

--- a/theme/templates/pages/site-wide-modals.html
+++ b/theme/templates/pages/site-wide-modals.html
@@ -13,7 +13,8 @@
                     <div>Enter the title for the new resource.
                     </div>
                     <br>
-                    <input class="form-control input-sm textinput textInput" id="txt-title" maxlength="300" name="value" type="text" placeholder="Resource Title" value="">
+                    <input class="form-control textinput textInput" maxlength="300"
+                           name="value" type="text" placeholder="Resource Title" value="">
                 </div>
             </div>
             <div class="modal-footer">
