[#3242] Add logic to render resource type specific modal titles

--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -34,6 +34,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="A resource which can include multiple files without file format limitations."
+                   data-modal-title="Create a Resource"
+                   data-modal-input-title="Enter the title for the new resource."
                    data-value="CompositeResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/composite48x48.png"
                          alt="Composite Resource Icon" class="resource-type-icon"/>
@@ -43,6 +45,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="A resource that holds a list of other resources in HydroShare."
+                   data-modal-title="Create a Collection"
+                   data-modal-input-title="Enter the title for the new collection of HydroShare resources."
                    data-value="CollectionResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/collection48x48.png"
                          alt="Collection Resource Icon" class="resource-type-icon"/>
@@ -52,6 +56,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="A shortcut (or reference) to an external web application that functions with HydroShare data resources."
+                   data-modal-title="Create a Web App Connector"
+                   data-modal-input-title="Enter the name for the new Web App Connector."
                    data-value="ToolResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/webapp48x48.png"
                          alt="Web App Resource Icon" class="resource-type-icon"/>
@@ -61,6 +67,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="Describes the software component of a generic model within the water domain."
+                   data-modal-title="Create a Model Program Resource"
+                   data-modal-input-title="Enter the name for the new Model Program Resource."
                    data-value="ModelProgramResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/modelprogram48x48.png"
                          alt="Model Program Resource Icon" class="resource-type-icon"/>
@@ -70,6 +78,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="Defines the input and output data for a generic hydrological model, for a specific time and place."
+                   data-modal-title="Create a Model Instance Resource"
+                   data-modal-input-title="Enter the name for the new Model Instance Resource."
                    data-value="ModelInstanceResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/modelinstance48x48.png"
                          alt="Model Instance Resource Icon" class="resource-type-icon"/>
@@ -79,6 +89,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="A specific case of the Model Instance resource that applies to the Soil and Water Assessment Tool."
+                   data-modal-title="Create a SWAT Model Instance Resource"
+                   data-modal-input-title="Enter the name for the new SWAT Model Instance Resource."
                    data-value="SWATModelInstanceResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/swat48x48.png"
                          alt="SWAT Model Instance Resource Icon" class="resource-type-icon"/>
@@ -88,6 +100,8 @@
             <li>
                 <a data-toggle="tooltip" data-placement="left"
                    title="A specific case of the Model Instance resource that applies to USGS MODFLOW 2000 and later versions."
+                   data-modal-title="Create a MODFLOW Model Instance Resource"
+                   data-modal-input-title="Enter the name for the new MODFLOW Model Instance Resource."
                    data-value="MODFLOWModelInstanceResource">
                     <img src="{{ STATIC_URL }}img/resource-icons/modflow48x48.png"
                          alt="Collection Resource Icon" class="resource-type-icon"/>
