--- a/theme/templates/pages/site-wide-modals.html
+++ b/theme/templates/pages/site-wide-modals.html
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-body">
                 <div class="warnings-list">
-                    <div>Enter the title for the new resource.
+                    <div class="modal-input-title">Enter the title for the new resource.
                     </div>
                     <br>
                     <input class="form-control textinput textInput" maxlength="300"
