--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -1,7 +1,3 @@
-<script>
-  const RES_KEYWORDS = {{ keywords|safe }};
-</script>
-
 <div class="col-xs-12 content-block" id="app-keyword">
     <h3>Subject Keywords</h3>
     <div class="row">
@@ -22,10 +18,11 @@
                     </div>
                 {% endif %}
 
-                <ul id="lst-tags" class="custom-well tag-list hidden">
-                    <li v-for="k in resKeywords">
+                <ul id="lst-tags" class="custom-well tag-list">
+                    <li class="small text-muted" v-if="!resKeywords.length">No subject keywords have been added.</li>
+                    <li v-else v-for="k in resKeywords">
                         {% if resource_edit_mode %}
-                            <span class="tag">${ k }<span
+                            <span v-if="resKeywords.length" class="tag">${ k }<span
                                     @click="removeKeyword('{{ cm.short_id }}', k )"
                                     class="glyphicon glyphicon-remove-circle icon-remove"></span></span>
                         {% else %}
@@ -33,7 +30,6 @@
                                :href="'/search/?q=&selected_facets=subject_exact:' + k">${ k }</a>
                         {% endif %}
                     </li>
-                    <li class="small text-muted" v-if="!resKeywords.length">No subject keywords have been added.</li>
                 </ul>
             </div>
             <div>
@@ -41,14 +37,16 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-6">
-                <span class="alert alert-warning group-title" role="alert">
-                    <div class="flex">
-                        <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
-                        <em style="padding-right:20px;">
-                            Deleting all keywords will set the resource sharing status to <strong>private</strong>.
-                        </em>
-                    </div>
-                </span>
+            <span class="alert alert-warning group-title" role="alert">
+                <div class="flex">
+                    <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
+                    <em style="padding-right:20px;">
+                        Deleting all keywords will set the resource sharing status to <strong>private</strong>.
+                    </em>
+                </div>
+            </span>
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="{{ STATIC_URL }}js/hs-vue/subjet-keywords.js"></script>
